# mafia

./: Cargo.toml
public/game/: index.css  index.html  index.js  main.js  table.js  websocket.js
public/layouts/: index.css  main.html
rules/: roles.json  times.json
src/: characters.rs  command.rs  controllers.rs  file.rs  game.rs  game_loop.rs  main.rs  player.rs  session.rs  websockets.rs
src/game_state/: mod.rs  role.rs  setup.rs
src/game_state/game/: character.rs  game_loop.rs  mod.rs  player.rs
src/internal/: console.rs  mod.rs
src/internal/lobby/: message.rs  mod.rs  player.rs
src/internal/lobby/game/: character.rs  message.rs  messages.rs  mod.rs  role.rs
src/lobby/: mod.rs  player.rs  role.rs
src/lobby/game/: character.rs  external.rs  game_loop.rs  mod.rs  role.rs
src/server/: controllers.rs  mod.rs  websockets.rs
