[package]
name = "mafia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "*"}
tokio = {version = "*", features = ["full"]}

reqwest = {version = "0.11.23", features = ["json"]}

serde_json = {version = "1.0.113"}
serde = {version = "1.0.196", features = ["derive"]}

rand = {version = "0.8.5"}
tera = { version = "1.19.1"}

tower-http = {version = "*", features = ["fs"]}

set = {version = "*", git = "https://github.com/DmitriyYankovskiy/set.git"}